--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "angular-speech-recognition",
-  "version": "a directive which enables to fill a form trough voice recognition",
+  "version": "0.0.1",
+  "description": "a directive which enables to fill a form trough voice recognition",
   "homepage": "https://github.com/acmello/angular-speech-recognition",
   "authors": [
     "Antonio Mello <acmello.ti@gmail.com>"
